--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <canvas id="myWebGLCanvas" width="512" height="512"></canvas>
 <div>
   <br>
+  Github page: https://github.com/zelinsun/prog2
+  <br>
+  <br>
   All commands
   <ul>
     <li><span style="font-style: italic">a and d</span> — translate view left and right along view X</li>
